--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -87,6 +87,10 @@
           list-style: none;
       }
 
+      .mt10 {
+          margin-top: 10px;
+      }
+
       .lh24 {
         line-height: 24px;
       }
@@ -101,6 +105,34 @@
 
       .color-other {
           color: #969696;
+      }
+
+      .text-c {
+        text-align: center;
+      }
+
+      .ver-t {
+          vertical-align: top;
+      }
+
+      .dis-flex {
+          display: -webkit-box;
+          display: flex;
+          display: -ms-flex;
+          display: -webkit-flex;
+          -webkit-flex-wrap: wrap;
+          flex-wrap: wrap;
+      }
+
+      .flex1 {
+          flex: 1;
+          -ms-flex: 1;
+          -webkit-flex: 1;
+          -webkit-box-flex: 1;
+      }
+
+      .flex-between {
+          justify-content: space-between;
       }
 
     </style>
