modified comment button

--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -153,6 +153,7 @@
             width: 150px;
             height: 40px;
             margin-top: 15px;
+            margin-left: 38px;
             padding: 5px 10px;
             font-size: 16px;
             font-weight: 500;
@@ -249,9 +250,9 @@
                                 </div>
                             </div>
                         </div>
+                        <button type="submit" class="comment-btn">发表</button>
                     </form>
                 </div>
-                <button type="submit" class="comment-btn">发表</button>
                 <div class="comment-content">
                     <p class="comment-submit-title">评论区</p>
                     <ul>
