--- a/blog/templates/blog/funny.html
+++ b/blog/templates/blog/funny.html
@@ -48,8 +48,8 @@
             box-shadow: 1px 3px 1px rgba(0, 0, 0, 0.08);
         }
 
-        .story p{
-            font-size: 18px;
+        .story p {
+            font-size: 16px;
             line-height: 26px;
         }
 
@@ -84,6 +84,15 @@
             overflow: hidden;
             white-space: nowrap;
             text-overflow: ellipsis;
+        }
+
+        .story-list a {
+            color: #787878;
+        }
+
+        .story-list a:hover {
+            color: #333;
+            text-decoration: none;
         }
 
         .story-title {
