--- a/blog/templates/blog/nature.html
+++ b/blog/templates/blog/nature.html
@@ -49,9 +49,8 @@
         }
 
         .story p{
-            font-size: 18px;
+            font-size: 16px;
             line-height: 26px;
-            /*text-align: center;*/
         }
 
         .story-list {
@@ -85,6 +84,15 @@
             overflow: hidden;
             white-space: nowrap;
             text-overflow: ellipsis;
+        }
+
+        .story-list a {
+            color: #787878;
+        }
+
+        .story-list a:hover {
+            color: #333;
+            text-decoration: none;
         }
 
         .story-title {
