--- a/blog/templates/blog/poem.html
+++ b/blog/templates/blog/poem.html
@@ -49,7 +49,7 @@
         }
 
         .story p{
-            font-size: 18px;
+            font-size: 16px;
             line-height: 26px;
             text-align: center;
         }
@@ -85,6 +85,15 @@
             overflow: hidden;
             white-space: nowrap;
             text-overflow: ellipsis;
+        }
+
+        .story-list a {
+            color: #787878;
+        }
+
+        .story-list a:hover {
+            color: #333;
+            text-decoration: none;
         }
 
         .story-title {
