--- a/blog/templates/blog/funny.html
+++ b/blog/templates/blog/funny.html
@@ -8,218 +8,13 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>小荇</title>
+    <title>言荇</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-
+    <link href="/static/blog/css/detail.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-            <!-- <link href="starter-template.css" rel="stylesheet"> -->
-        <style>
-            body {
-            font-size: 0;
-        }
 
-        p, li {
-            font-size: 14px;
-        }
-
-        .ft0 {
-            font-size: 0;
-        }
-
-        .main {
-            margin-top: 90px;
-        }
-
-        .story-main {
-            display: inline-block;
-            width: 80%;
-            /*margin-top: 90px;*/
-            background-color: #fff;
-        }
-
-        .story {
-            /*margin: 0 auto;*/
-            padding: 25px;
-            background-color: #f2f2f2;
-            border: 1px solid #dbe3e7;
-            border-radius: 3px;
-            box-shadow: 1px 3px 1px rgba(0, 0, 0, 0.08);
-        }
-
-        .story p {
-            font-size: 16px;
-            line-height: 26px;
-        }
-
-        .story-list {
-            display: inline-block;
-            width: 20%;
-            padding-left: 30px;
-            vertical-align: top;
-        }
-
-        .story-list .other {
-            margin: 0;
-            padding: 4px 0 4px 10px;
-            font-size: 14px;
-            color: #fff;
-            background-color: #da4e43;
-            border-radius: 2px;
-        }
-
-        .story-list .story-list-border{
-            border-radius: 3px;
-            border: 1px solid #da4e43;
-            box-shadow: 0 0 1px #da4e43;
-        }
-
-        .story-list .list {
-            padding: 10px;
-        }
-
-        .story-list .list div{
-            color: #333333;
-            overflow: hidden;
-            white-space: nowrap;
-            text-overflow: ellipsis;
-        }
-
-        .story-list a {
-            color: #787878;
-        }
-
-        .story-list a:hover {
-            color: #333;
-            text-decoration: none;
-        }
-
-        .story-title {
-            margin-bottom: 30px;
-            text-align: center;
-        }
-
-        .comment-area {
-            margin-top: 70px;
-            padding: 0 25px 25px;
-            background-color: #f2f2f2;
-        }
-
-        .comment-content {
-            padding: 0 25px 25px;
-            background-color: #f2f2f2;
-        }
-
-        .comment-submit-title {
-            margin-top: 50px;
-            padding: 20px 0 10px;
-            margin-bottom: 30px;
-            font-size: 18px;
-            border-radius: 4px;
-            border-bottom: 2px solid #f2f2f2;
-            background-color: #f2f2f2;
-        }
-
-        .comment-form input {
-            width: 350px;
-            height: 40px;
-            margin-bottom: 20px;
-            padding: 15px 15px;
-            font-size: 16px;
-            line-height: 100%;
-            border-radius: 5px;
-            background-color: #fafbfc;
-            border: 1px solid #dbe3e7;
-            /*transition: 0.4s border-color linear;*/
-        }
-
-        .comment-form input:focus {
-            outline: none;
-            border: 1px solid #1277eb;
-        }
-
-        .comment-form textarea {
-            display: inline-block;
-            width: 100%;
-            min-height: 183px;
-            padding: 15px 15px;
-            /*margin-bottom: 15px;*/
-            font-size: 16px;
-            line-height: 20px !important;
-            border-radius: 5px;
-            border: 1px solid #dbe3e7;
-            background-color: #fafbfc;
-            /*transition: 0.4s border-color linear;*/
-        }
-
-        .comment-form textarea:focus {
-            outline: none;
-            border: 1px solid #1277eb;
-        }
-
-        .comment-btn {
-            width: 150px;
-            height: 40px;
-            margin-top: 15px;
-            margin-left: 38px;
-            padding: 5px 10px;
-            font-size: 16px;
-            font-weight: 500;
-            color: #fff;
-            background-color: #E45E57;
-            border: 1px solid #da4e43;
-            border-radius: 3px;
-            outline: none;
-        }
-
-        .comment-btn:hover {
-            background-color: #DD453A;
-        }
-
-       .comment-form label {
-            /*display: block;*/
-            margin-right: 10px;
-            font-size: 14px;
-        }
-
-        .comment-list {
-            margin-top: 15px;
-        }
-
-        .comment-item:not(:last-child) {
-            border-bottom: 1px #ccc solid;
-            margin-bottom: 20px;
-            padding-bottom: 20px;
-        }
-
-        .comment-item .nickname,
-        .comment-item .submit-date {
-            color: #777;
-            font-size: 14px;
-        }
-
-        .comment-item .nickname:after {
-            content: ' ·';
-        }
-
-        .comment-item .text {
-            padding-top: 5px;
-            font-size: 16px;
-        }
-
-        .comment-name,
-        .comment-time {
-            color: #777;
-        }
-
-        .comment-content-li {
-            padding: 10px 0;
-            border-top: 1px solid #dbe3e7;
-            /*border-bottom: 1px solid #777;*/
-        }
-
-    </style>
  </head>
 
  <body>
