--- a/blog/static/blog/css/detail.css
+++ b/blog/static/blog/css/detail.css
@@ -3,11 +3,11 @@ body {
 }
 
 p, li {
-	font-size: 14px;
+    font-size: 14px;
 }
 
 .ft0 {
-	font-size: 0;
+    font-size: 0;
 }
 
 .main {
@@ -15,10 +15,10 @@ p, li {
 }
 
 .story-main {
-	display: inline-block;
-	width: 80%;
-	/*margin-top: 90px;*/
-	background-color: #fff;
+    display: inline-block;
+    width: 80%;
+    /*margin-top: 90px;*/
+    background-color: #fff;
 }
 
 .story {
@@ -30,39 +30,177 @@ p, li {
     box-shadow: 1px 3px 1px rgba(0, 0, 0, 0.08);
 }
 
-.story-text {
-	background-color: ;
+.story p{
+    font-size: 16px;
+    line-height: 26px;
+}
+
+.story.poem p {
+    text-align: center;
 }
 
 .story-list {
-	display: inline-block;
-	width: 20%;
-	padding-left: 30px;
-	vertical-align: top;
+    display: inline-block;
+    width: 20%;
+    padding-left: 30px;
+    vertical-align: top;
 }
 
 .story-list .other {
-	margin: 0;
-	padding: 4px 0 4px 10px;
-	font-size: 14px;
-	color: #fff;
+    margin: 0;
+    padding: 4px 0 4px 10px;
+    font-size: 14px;
+    color: #fff;
     background-color: #da4e43;
     border-radius: 2px;
 }
 
 .story-list .story-list-border{
-	border-radius: 3px;
-	border: 1px solid #da4e43;
-	box-shadow: 0 0 1px #da4e43;
+    border-radius: 3px;
+    border: 1px solid #da4e43;
+    box-shadow: 0 0 1px #da4e43;
 }
 
 .story-list .list {
-	padding: 10px;
+    padding: 10px;
 }
 
 .story-list .list div{
-	color: #333333;
+    color: #333333;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+}
+
+.story-list a {
+    color: #787878;
+}
+
+.story-list a:hover {
+    color: #333;
+    text-decoration: none;
+}
+
+.story-title {
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+.comment-area {
+    margin-top: 70px;
+    padding: 0 25px 25px;
+    background-color: #f2f2f2;
+}
+
+.comment-content {
+    padding: 0 25px 25px;
+    background-color: #f2f2f2;
+}
+
+.comment-submit-title {
+    margin-top: 50px;
+    padding: 20px 0 10px;
+    margin-bottom: 30px;
+    font-size: 18px;
+    border-radius: 4px;
+    border-bottom: 2px solid #f2f2f2;
+    background-color: #f2f2f2;
+}
+
+.comment-form input {
+    width: 350px;
+    height: 40px;
+    margin-bottom: 20px;
+    padding: 15px 15px;
+    font-size: 16px;
+    line-height: 100%;
+    border-radius: 5px;
+    background-color: #fafbfc;
+    border: 1px solid #dbe3e7;
+    /*transition: 0.4s border-color linear;*/
+}
+
+.comment-form input:focus {
+    outline: none;
+    border: 1px solid #1277eb;
+}
+
+.comment-form textarea {
+    display: inline-block;
+    width: 100%;
+    min-height: 183px;
+    padding: 15px 15px;
+    /*margin-bottom: 15px;*/
+    font-size: 16px;
+    line-height: 20px !important;
+    border-radius: 5px;
+    border: 1px solid #dbe3e7;
+    background-color: #fafbfc;
+    /*transition: 0.4s border-color linear;*/
+}
+
+.comment-form textarea:focus {
+    outline: none;
+    border: 1px solid #1277eb;
+}
+
+.comment-btn {
+    width: 150px;
+    height: 40px;
+    margin-top: 15px;
+    margin-left: 38px;
+    padding: 5px 10px;
+    font-size: 16px;
+    font-weight: 500;
+    color: #fff;
+    background-color: #E45E57;
+    border: 1px solid #da4e43;
+    border-radius: 3px;
+    outline: none;
+}
+
+.comment-btn:hover {
+    background-color: #DD453A;
+}
+
+.comment-form label {
+    /*display: block;*/
+    margin-right: 10px;
+    font-size: 14px;
+}
+
+.comment-list {
+    margin-top: 15px;
+}
+
+.comment-item:not(:last-child) {
+    border-bottom: 1px #ccc solid;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+}
+
+.comment-item .nickname,
+.comment-item .submit-date {
+    color: #777;
+    font-size: 14px;
+}
+
+.comment-item .nickname:after {
+    content: ' ¡¤';
+}
+
+.comment-item .text {
+    padding-top: 5px;
+    font-size: 16px;
+}
+
+.comment-name,
+.comment-time {
+    color: #777;
+}
+
+.comment-content-li {
+    padding: 10px 0;
+    border-top: 1px solid #dbe3e7;
+    /*border-bottom: 1px solid #777;*/
 }
