--- a/blog/static/blog/css/index.css
+++ b/blog/static/blog/css/index.css
@@ -1,28 +1,105 @@
-body {
+html, body {
+    width: 100%;
+    height: 100%;
     font-size: 0;
+    font-family: "Source Sans Pro", Calibri, Candara, Arial, sans-serif;
+}
+
+.all {
+    /*position: absolute;*/
+    width: 100%;
+    height: 100%;
+}
+
+.first {
+    position: relative;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+
+/*     .second {
+    position: absolute;
+}*/
+
+.bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url(/static/blog/img/home2.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    z-index: -1;
+}
+
+.bg::after {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: rgba(248, 248, 248, 0.6);
 }
 
 p, li {
-	font-size: 14px;
+    font-size: 14px;
 }
 
 .ft0 {
-	font-size: 0;
+    font-size: 0;
 }
 
 .main {
-    margin-top: 90px;
+    margin-top: 260px;
+}
+
+.main .desc {
+    font-size: 42px;
+    color: #777;
+    text-shadow: 0 0 10px #fff;
+}
+
+.main .text {
+    width: 220px;
+    margin: 0 auto;
+    margin-top: 40px;
+    /*text-shadow: 0 0 10px #fff;*/
+}
+
+.main .text p {
+    color: #505050;
+    font-size: 20px;
+}
+
+.more {
+    position: absolute;
+    bottom: 40px;
+    width: 100%;
+    text-align: center;
+}
+
+.more i {
+    margin-right: 5px;
+}
+
+.more span {
+    font-size: 16px;
+    cursor: pointer;
 }
 
 .story-main {
-	display: inline-block;
-	width: 80%;
-	/*margin-top: 90px;*/
-	background-color: #fff;
+    display: inline-block;
+    width: 80%;
+    background-color: #fff;
 }
 
 .story {
-    /*margin: 0 auto;*/
     padding: 25px;
     background-color: #f2f2f2;
     border: 1px solid #dbe3e7;
@@ -31,38 +108,195 @@ p, li {
 }
 
 .story-text {
-	background-color: ;
+    background-color: ;
 }
 
-.story-list {
-	display: inline-block;
-	width: 20%;
-	padding-left: 30px;
-	vertical-align: top;
+.module {
+    background-color: #F8FAFC;
 }
 
-.story-list .other {
-	margin: 0;
-	padding: 4px 0 4px 10px;
-	font-size: 14px;
-	color: #fff;
-    background-color: #da4e43;
-    border-radius: 2px;
+.module img {
+    width: 300px;
+    height: 170px;
 }
 
-.story-list .story-list-border{
-	border-radius: 3px;
-	border: 1px solid #da4e43;
-	box-shadow: 0 0 1px #da4e43;
+.comic-img-div,
+.nature-img-div {
+    position: relative;
+    width: 300px;
+    height: 170px;
 }
 
-.story-list .list {
-	padding: 10px;
+.comic-img-div .mask,
+.nature-img-div .mask {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255,255,255,0.4);
 }
 
-.story-list .list div{
-	color: #333333;
+.module .title {
+    margin-bottom: 40px;
+    text-align: center;
+    font-size: 26px;
+    color: #4e4e4e;
+}
+
+i {
+    color: #da4e43;
+}
+
+.module-same {
+    padding: 50px 0 50px;
+    /*padding-bottom: 100px;*/
+    box-shadow: 0 2px 8px 0 rgba(7,17,27,.06);
+    /*background-color: #fff;*/
+    background: #FAFAFA;
+   /* background: #f5f3ef;*/
+}
+
+.module-same-bg  {
+    padding: 50px 0 50px;
+    box-shadow: 0 2px 4px 0 rgba(7,17,27,.06);
+}
+
+.module-same img,
+.module-same-bg img {
+    border-radius: 4px;
+}
+
+.module-text {
+    margin-bottom: 20px;
+}
+
+.module-text p {
+    margin-top: 10px;
+    margin-bottom: 30px;
+}
+
+.module-poem img {
+    margin-bottom: 30px;
+}
+
+.hiddenFour {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 4;
+    max-height: 96px;
     overflow: hidden;
-    white-space: nowrap;
     text-overflow: ellipsis;
+    text-overflow: -o-ellipsis-lastline;
 }
+
+.module-fable p {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 4;
+    max-height: 96px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-overflow: -o-ellipsis-lastline;
+}
+
+.fable-text li {
+    width: 300px;
+    margin-bottom: 50px;
+    padding: 20px;
+    box-shadow: rgba(0, 0, 0, 0.08) 1px 3px 3px;
+    /*box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.08);*/
+    /*border: 1px solid #dbe3e7;*/
+    border-radius: 3px;
+    background-color: #fff;
+}
+
+.fable-text li:hover,
+.poem-text li:hover {
+    box-shadow: 1px 3px 18px 0 rgba(0, 0, 0, 0.08);
+    /*box-shadow: 1px 3px 18px 0 #da4e43;*/
+}
+
+.poem-text li {
+    width: 300px;
+    height: 156px;
+    margin-bottom: 50px;
+    padding: 20px 0 0;
+    box-shadow: rgba(0, 0, 0, 0.08) 1px 3px 3px;
+    border-radius: 3px;
+}
+
+.fable-text .fable-text-title,
+.poem-text .poem-text-title {
+    position: relative;
+    font-size: 20px;
+    font-weight: 600;
+    color: #464240;
+}
+
+.fable-text .fable-text-content,
+.poem-text .poem-text-content {
+    line-height: 24px;
+    font-size: 16px;
+    color: #797572;
+}
+
+.title-icon-r-same {
+    display: inline-block;
+    position: absolute;
+    right: 0;
+    width: 30px;
+    height: 17px;
+    vertical-align: bottom;
+}
+
+.title-icon-l-same {
+    display: inline-block;
+    position: absolute;
+    left: 0;
+    vertical-align: bottom;
+    width: 30px;
+    height: 17px;
+}
+
+.title-icon {
+    display: inline-block;
+    vertical-align: bottom;
+    width: 56px;
+    height: 36px;
+    background: url(/static/blog/img/icon.png) no-repeat;
+    background-size: 100%;
+}
+
+span.icon-new-r {
+    margin-left: 24px;
+    background-position: center -108px;
+}
+
+span.icon-new-l {
+    margin-right: 24px;
+    background-position: center -72px;
+}
+
+span.icon-new-r3 {
+    margin-left: 24px;
+    background-position: center -36px;
+}
+
+span.icon-new-l3 {
+    margin-right: 24px;
+    background-position: center 0;
+}
+
+.none {
+    display: none;
+}
+
+.all a {
+    text-decoration: none;
+}
+
+.all a:hover {
+    text-decoration: none;
+}
+
